Align dropdown right. Fixes #555

--- a/app/assets/stylesheets/DocumentSet/index.less
+++ b/app/assets/stylesheets/DocumentSet/index.less
@@ -16,6 +16,16 @@ body.document-set-index {
     .dropdown {
       display: inline-block;
     }
+
+    // Pilfered from https://github.com/twitter/bootstrap/issues/2045
+    .dropdown-menu:after {
+      left: auto;
+      right: 13px;
+    }
+    .dropdown-menu {
+      left: auto;
+      right: 0;
+    }
   }
 
   #jobs-and-document-sets .nav-buttons {
